# BST-KDTREE-NearestNeighbor

./: .README.md.swp  README.md  REF1.txt  meson.build  ref_output.txt  reft.txt  solution-main.executable  solution-main2.executable
.devcontainer/: devcontainer.json  docker-compose.yml
buld/: build.ninja  compile_commands.json
buld/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
buld/meson-logs/: meson-log.txt
data/: actors.txt  my_custom_input.txt  queryActors.txt  smallActors.txt  smallBuild.txt  smallQuery.txt
src/: meson.build
src/bst/: .BST.hpp.swp  .BSTIterator.hpp.swp  .BSTNode.hpp.swp  BST.hpp  BSTIterator.hpp  BSTNode.hpp  main.c  meson.build
src/kdt/: .KDT.hpp.swk  .KDT.hpp.swl  .KDT.hpp.swm  .KDT.hpp.swn  .KDT.hpp.swo  .KDT.hpp.swp  .Point.hpp.swp  KDT.hpp  Point.hpp  meson.build
test/: meson.build
test/bst/: .test_BST.cpp.swp  .test_BSTIterator.cpp.swp  .test_BSTNode.cpp.swp  main.cpp  meson.build  test_BST.cpp  test_BSTIterator.cpp  test_BSTNode.cpp
test/kdt/: .test_KDT.cpp.swp  .test_Point.cpp.swp  NaiveSearch.hpp  Timer.hpp  efficiencyTest.cpp  main2.cpp  meson.build  test_KDT.cpp  test_Point.cpp
test/util/: meson.build  util.hpp
